--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,46 @@
-node_modules
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Output
-.output
+# Build / output (SvelteKit, Vercel, Netlify, etc.)
+dist/
+build/
+.output/
+.svelte-kit/
 .vercel
 .netlify
 .wrangler
-/.svelte-kit
-/build
+*.tsbuildinfo
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Env
+# Environment variables
 .env
+.env.local
+.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env.*
 !.env.example
 !.env.test
+
+# Database & data
+data/
+*.db
+*.db-wal
+*.db-shm
+*.sqlite
+*.sqlite3
+
+# Generated / exported calendar files
+merged.ics
+*.ics.export
+export.ics
 
 # Local assets
 /static/photos/
@@ -24,3 +48,71 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Drizzle ORM
+.drizzle/
+drizzle/migrations/*.lock
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+pino-*.log
+
+# Test coverage
+coverage/
+.nyc_output/
+*.lcov
+
+# IDE & editor
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.idea/
+*.swp
+*.swo
+*~
+
+# AI-powered IDEs (directories only)
+.cursor/
+.windsurf/
+.cascade/
+.codeium/
+
+# OS files
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+.Spotlight-V100
+.Trashes
+
+# Temporary files
+*.tmp
+*.temp
+*.diff
+.cache/
+.temp/
+
+# OAuth & credentials (extra safety)
+tokens.json
+credentials.json
+oauth_tokens.db
+
+# Optional npm cache
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
