--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
+		"dev:lan": "vite dev --host 0.0.0.0 --port 5173",
 		"build": "yarn optimize:photos && vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
